--- a/ax6.config
+++ b/ax6.config
@@ -13,16 +13,42 @@ CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y
 CONFIG_LIBSODIUM_MINIMAL=y
 
 
-#turboacc
+
+# CONFIG_PACKAGE_luci-app-rclone is not set
+# CONFIG_PACKAGE_luci-app-rclone is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+# CONFIG_PACKAGE_luci-app-rclone is not set
+
+#CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
+#CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
+
 #CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut_FE_for_ECM is not set
-CONFIG_PACKAGE_luci-app-turboacc=y
-#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
+#CONFIG_PACKAGE_luci-app-turboacc=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
 #CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
 #CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
 #CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
 
+
+#5.15测试内核开关
+#CONFIG_TESTING_KERNEL=y
+
+#语言
+#CONFIG_LUCI_LANG_en=y
+CONFIG_LUCI_LANG_zh_Hans=y
+
+CONFIG_PACKAGE_kmod-zram=y
+CONFIG_PACKAGE_zram-swap=y
+
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_6rd=y
+CONFIG_PACKAGE_6to4=y
 
 #ath11k无线及NSS
 CONFIG_DEFAULT_ath11k-firmware-ipq8074=y
@@ -123,86 +149,52 @@ CONFIG_PACKAGE_kmod-qca-nss-ecm-64=y
 
 
 
-
-#语言
-CONFIG_LUCI_LANG_en=y
-CONFIG_LUCI_LANG_zh_Hans=y
-
-#虚拟内存
-CONFIG_PACKAGE_kmod-zram=y
-CONFIG_PACKAGE_zram-swap=y
-
-#ipv6
-CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_6rd=y
-CONFIG_PACKAGE_6to4=y
-
-#删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb3 is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 
-#插件区
-# CONFIG_PACKAGE_luci-app-luci-app-mosdns=y
-
-#CONFIG_PACKAGE_luci-app-adguardhome=y
-
-# CONFIG_PACKAGE_luci-app-advanced is not set
-# CONFIG_PACKAGE_luci-app-filetransfer is not set
-
-
-# CONFIG_PACKAGE_luci-app-rclone is not set
-# CONFIG_PACKAGE_luci-app-rclone is not set
-# CONFIG_PACKAGE_luci-app-rclone is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-
-
-CONFIG_PACKAGE_luci-app-easymesh=y
-
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-frps=y
-
-CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
 
-# CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
 
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
-#CONFIG_PACKAGE_luci-app-dawn=y
-CONFIG_PACKAGE_luci-app-n2n_v2=y
+CONFIG_PACKAGE_luci-app-ddns is not set 
+CONFIG_PACKAGE_luci-app-mwan3 is not set
+CONFIG_PACKAGE_luci-app-syncdial is not set
 
-CONFIG_PACKAGE_luci-app-netdata=y
+# CONFIG_PACKAGE_luci-app-advanced is not set
+CONFIG_PACKAGE_luci-app-filetransfer=y
 
+
+
+# CONFIG_PACKAGE_luci-app-netdata is not set
+# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
+# CONFIG_PACKAGE_luci-app-easymesh is not set
+CONFIG_PACKAGE_luci-app-guest-wifi=y
+# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 CONFIG_PACKAGE_luci-app-ntpc=y
-CONFIG_PACKAGE_luci-app-dnsfilter=y
-CONFIG_PACKAGE_luci-app-nps=y
-
-#CONFIG_PACKAGE_luci-app-oaf=y
-
 CONFIG_PACKAGE_luci-app-openclash=y
+# CONFIG_PACKAGE_luci-app-qos is not set
+CONFIG_PACKAGE_luci-app-smartdns=y
+
+#CONFIG_PACKAGE_luci-app-dnsfilter is not set
+
 
 CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
-
-CONFIG_PACKAGE_luci-app-pppoe-relay=y
-
-CONFIG_PACKAGE_luci-app-pptp-server=y
-
-CONFIG_PACKAGE_luci-app-pushbot=y
-
-# CONFIG_PACKAGE_luci-app-qos is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
+CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 
 CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-mosdns=y
+
+
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+
+# CONFIG_PACKAGE_luci-app-dawn is not set
 
 # CONFIG_PACKAGE_luci-app-eqos is not set
 # CONFIG_PACKAGE_luci-app-sqm is not set
@@ -210,34 +202,15 @@ CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-theme-argon is not set
 # CONFIG_PACKAGE_luci-app-argon-config is not set
 
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
 
-CONFIG_PACKAGE_luci-app-syncdial=y
+
 
 CONFIG_PACKAGE_luci-app-ttyd=y
-
-CONFIG_PACKAGE_luci-app-udpxy=y
-
-CONFIG_PACKAGE_luci-app-uhttpd=y
-
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
-
-CONFIG_PACKAGE_luci-app-uugamebooster=y
-
-CONFIG_PACKAGE_luci-app-vlmcsd=y
-
+# CONFIG_PACKAGE_luci-app-vlmcsd is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
-
-CONFIG_PACKAGE_luci-app-wifischedule=y
-
-CONFIG_PACKAGE_luci-app-wireguard=y
-
-CONFIG_PACKAGE_luci-proto-wireguard=y
-# CONFIG_PACKAGE_luci-app-nlbwmon is not set
-
-#主题
-CONFIG_PACKAGE_luci-theme-infinityfreedom=y
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
